--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,28 @@
 {
+
     "manifest_version": 2,
   
-    "name": "étude comportale sur le web",
+    "name": "Étude comportale sur le web",
     "description": "This extension is for education purpose",
     "version": "1.0",
+
+  "permissions": ["notifications", "tabs", "downloads"],
+
+  "background": {
+    "scripts": ["background-script.js"]
+  },
   
-    "browser_action": {
-     "default_icon": "icon.png",
-     "default_popup": "popup.html"
-    },
-    "permissions": ["tabs"]
-  }
+  "browser_action": {
+   "default_icon": "icon.png",
+   "default_popup": "popup.html"
+  },
+
+
+  "content_scripts": [
+    {
+      "matches": ["*://*.utc.fr/*"],
+      "js": ["content-script.js"]
+    }
+  ]
+
+}
