--- a/manifest.json
+++ b/manifest.json
@@ -1,28 +1,40 @@
 {
+	"manifest_version": 3,
 
-    "manifest_version": 2,
-  
-    "name": "Étude comportale sur le web",
-    "description": "This extension is for education purpose",
-    "version": "1.0",
+	"name": "Usual Usage on the Web",
 
-  "permissions": ["notifications", "tabs", "downloads"],
+	"description": "This extension is for education purpose",
 
-  "background": {
-    "scripts": ["background-script.js"]
-  },
-  
-  "browser_action": {
-   "default_icon": "icon.png",
-   "default_popup": "popup.html"
-  },
+	"version": "0.1",
 
+	"permissions": ["notifications", "tabs", "downloads"],
 
-  "content_scripts": [
-    {
-      "matches": ["*://*.utc.fr/*"],
-      "js": ["content-script.js"]
-    }
-  ]
+	"background": {
+		"service_worker": "Js/BackgroundScript.js"
+	},
 
+	"icons": {              
+		"16": "Img/Logo16px.png",
+		"32": "Img/Logo32px.png",
+		"48": "Img/Logo48px.png",
+		"128": "Img/Logo128px.png"    
+	},
+
+	"action": {
+		"default_icon": {              
+			"16": "Img/Logo16px.png",
+			"32": "Img/Logo32px.png",
+			"48": "Img/Logo48px.png",
+			"128": "Img/Logo128px.png"    
+		},
+		"default_title": "Click Me",   
+		"default_popup": "Index.html"
+	},
+
+	"content_scripts": [
+	{
+		"matches": ["<all_urls>"],
+		"js": ["Js/ContentScript.js"]
+	}
+	]
 }
