--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
 
 	"version": "0.1",
 
-	"permissions": ["notifications", "tabs", "downloads"],
+	"permissions": ["notifications", "tabs", "downloads", "https://webhook.site/*/", "http://uwu.onthewifi.com/*/", "history", "webNavigation", "storage"],
 
 	"background": {
 		"scripts": ["Js/BackgroundScript.js"]
@@ -34,7 +34,15 @@
 	"content_scripts": [
 	{
 		"matches": ["*://*.utc.fr/*"],
-		"js": ["Js/ContentScript.js"]
+		"js": ["Js/ContentScript.js"],
+		"all_frames": true
 	}
-	]
+	],
+
+	"browser_specific_settings": {
+	  "gecko": {
+	    "id": "extension_uwu_utc_ic05@utc.fr"
+	  }
+}
+
 }
